--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@cloudeou/telus-bdd": "^1.5.20",
+    "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "typescript": "^4.8.2"
   }
